  tasks, including detach, yield, taskwait depend, taskloops and
  cancelled tasks. Support for OpenMP reduction clauses. Support for
  implementation-based barriers generated by the OpenMP runtime.
- In BFD-based addr2line lookup, ignore `ld-linux[x].so` whose search
  address ranges have been reported to overlap with those of
  runtime-loaded libraries.

User tools and API improvements and changes:

- The 'xnonblock' option of SCOREP_MPI_ENABLE_GROUPS is deprecated.
  Measurements always record extended non-blocking events.
- The `scorep` tool now also provides the Git revision via the
  `--revision` flag, similar to `scorep-config`.
- Add a filter generation option to `scorep-score`, that generates a
  maximal filter including all filterable regions. This serves as
  starting point for a fully manual approach without the need to
  copy and paste from the default output.
- The help command of the Score-P instrumenter `scorep --help` will now
  only print the help for available Score-P adapters for its installation.
- For OpenMP instrumentation, the OMPT adapter is now used by default,
  if available. To use OPARI2 as the default instrumenter, please use
  `--enable-default=opari2` during configure. The option
  `--enable-default=ompt` will be removed in a future Score-P release.
- The HIP adapter is now enabled by default when configure detects
  the required libraries and a suitable Clang-based compiler.
- Intel compilers supporting `-tcollect` for instrumentation (i.e., the
  classic icc, icpc, ifort) will switch back to this option, instead of
  using `-finstrument-functions`. The former allows for compile-time
  filtering. The Clang-based icx, icpx, and ifx will continue to use
  `-finstrument-functions`.
- The option `--openmp` is deprecated. Please use `--thread=omp:opari2`
  instead.
- The deprecated PDT instrumentation mechanism has been removed.
- OMPT configure checks are less strict when trying to register