@@ -98,6 +98,7 @@ struct lt_object
     SO_OBJECT_COMMON;
 };
 static lt_object* lt_objects;
+static uint32_t   n_overlapping_address_ranges;
 
 static bool addr2line_initialized;
 
@@ -211,23 +212,10 @@ fill_lt_arrays_cb( struct dl_phdr_info* info, size_t unused, void* cnt )
         return 0;
     }
 
-    /* add shared object representation to array. keep arrays sorted by
-       begin-address */
+    /* add shared object representation to array. No need to keep array
+       sorted (e.g., by begin-address). As address ranges may overlap,
+       we later on search all load-time and run-time objects. */
     size_t insert = ( *( size_t* )cnt )++;
-    for ( size_t j = insert; j-- > 0; )
-    {
-        if ( lt_begin_addrs[ j ] > begin_addr_min )
-        {
-            lt_begin_addrs[ j + 1 ] = lt_begin_addrs[ j ];
-            lt_objects[ j + 1 ]     = lt_objects[ j ];
-            insert                  = j;
-        }
-        else
-        {
-            break;
-        }
-    }
-
     lt_begin_addrs[ insert ]        = begin_addr_min;
     lt_objects[ insert ].end_addr   = end_addr_max;
     lt_objects[ insert ].base_addr  = base_addr;
@@ -236,6 +224,16 @@ fill_lt_arrays_cb( struct dl_phdr_info* info, size_t unused, void* cnt )
     lt_objects[ insert ].name       = name;
     lt_objects[ insert ].token      = SCOREP_ADDR2LINE_LT_OBJECT_TOKEN;
     lt_objects[ insert ].abfd_mutex = UTILS_MUTEX_INIT;
+
+    /* Check for overlapping address ranges (no assumptions made). */
+    for ( size_t i = 0; i < insert; ++i )
+    {
+        if ( lt_begin_addrs[ i ] <= lt_objects[ insert ].end_addr
+             && lt_objects[ i ].end_addr >= lt_begin_addrs[ insert ] )
+        {
+            n_overlapping_address_ranges++;
+        }
+    }
 
     UTILS_DEBUG( "Use %s: base=%" PRIuPTR "; begin=%" PRIuPTR "; end=%" PRIuPTR "",
                  name, base_addr, begin_addr_min, end_addr_max );
@@ -393,8 +391,26 @@ struct lookup_bfd_t
 };
 
 
+/* An lrt_objects_container is obtained from a thread-safe pool in
+   SCOREP_Addr2line_Lookup* and returned immediatly after use. A container
+   is needed as address-ranges potentially overlap, thus there is no 1:1
+   address to lt/rt_object mapping. */
+typedef struct lrt_objects_container lrt_objects_container;
+struct lrt_objects_container
+{
+    size_t                 capacity;  /* number of elements that can be held in
+                                         currently allocated objects[] storage */
+    size_t                 size;      /* number of elements in objects[] */
+    lrt_objects_container* next;      /* linked list */
+    bool                   unlock;    /* unlock after use in case of rt_objetcs */
+    lt_object*             objects[]; /* Flexible array member */
+};
+
+
 /* *INDENT-OFF* */
-static lt_object* lookup_so( uintptr_t addr );
+static lrt_objects_container* get_lrt_objects_container_from_pool( void );
+static inline void release_lrt_objects_container_to_pool( lrt_objects_container* container );
+static void lookup_so( uintptr_t addr, lrt_objects_container* matches );
 static void section_iterator( bfd* abfd, asection* section, void* payload );
 static inline void map_over_sections_locked( lt_object* handle, void* data );
 /* *INDENT-ON* */
@@ -413,14 +429,51 @@ SCOREP_Addr2line_LookupSo( uintptr_t    programCounterAddr,
                   soBaseAddr == NULL ||
                   soToken == NULL,
                   "Need valid OUT handles but NULL provided." );
-    lt_object* handle = lookup_so( programCounterAddr );
-    *soHandle = handle;
-    *soToken  = SCOREP_ADDR2LINE_SO_OBJECT_INVALID_TOKEN;
-    if ( handle )
+
+    /* We assume an address to be bfd-found in one lt_object only, even if
+       address is contained in more than one, potentially overlapping,
+       lt_object address-ranges. Obtain address-ranges first, then do
+       bfd-lookup to confirm. */
+    lrt_objects_container* matches = get_lrt_objects_container_from_pool();
+    lookup_so( programCounterAddr, matches );
+    bool addr_found = false;
+    for ( size_t i = 0; i < matches->size; ++i )
     {
+        lt_object* handle = matches->objects[ i ];
         *soFileName = handle->name;
         *soBaseAddr = handle->base_addr;
         *soToken    = handle->token;
+        bool         found_begin_addr;
+        bool         found_end_addr_unused;
+        const char*  function_name_unused;
+        unsigned     line_no_unused;
+        lookup_bfd_t data = {
+            .begin_addr           = programCounterAddr - handle->base_addr,
+            .end_addr             = 0,
+            .symbols              = handle->symbols,
+            .scl_found_begin_addr = &found_begin_addr,
+            .scl_found_end_addr   = &found_end_addr_unused,
+            .scl_file_name        = soFileName,
+            .scl_function_name    = &function_name_unused,
+            .scl_begin_lno        = &line_no_unused,
+            .scl_end_lno          = NULL
+        };
+        *( data.scl_found_begin_addr ) = false;
+        *( data.scl_found_end_addr )   = false;
+
+        map_over_sections_locked( handle, &data );
+        if ( *( data.scl_found_begin_addr ) )
+        {
+            addr_found = true;
+            *soHandle  = handle;
+            break;
+        }
+    }
+    release_lrt_objects_container_to_pool( matches );
+    if ( !addr_found )
+    {
+        *soToken  = SCOREP_ADDR2LINE_SO_OBJECT_INVALID_TOKEN;
+        *soHandle = NULL;
     }
 }
 
@@ -621,14 +674,13 @@ SCOREP_Addr2line_LookupAddr( uintptr_t    programCounterAddr,
                   sclFunctionName == NULL ||
                   sclLineNo == NULL,
                   "Need valid OUT handles but NULL provided." );
-    lt_object* handle = lookup_so( programCounterAddr );
-    *soHandle = handle;
-    if ( handle )
-    {
-        *soFileName = handle->name;
-        *soBaseAddr = handle->base_addr;
-        *soToken    = handle->token;
 
+    lrt_objects_container* matches = get_lrt_objects_container_from_pool();
+    lookup_so( programCounterAddr, matches );
+    bool addr_found = false;
+    for ( size_t i = 0; i < matches->size; ++i )
+    {
+        lt_object*   handle = matches->objects[ i ];
         bool         found_end_addr_unused;
         lookup_bfd_t data = {
             .begin_addr           = programCounterAddr - handle->base_addr,
@@ -645,9 +697,20 @@ SCOREP_Addr2line_LookupAddr( uintptr_t    programCounterAddr,
         *( data.scl_found_end_addr )   = false;
 
         map_over_sections_locked( handle, &data );
+        if ( *sclFound )
+        {
+            addr_found  = true;
+            *soHandle   = handle;
+            *soFileName = handle->name;
+            *soBaseAddr = handle->base_addr;
+            *soToken    = handle->token;
+            break;
+        }
     }
-    else
+    release_lrt_objects_container_to_pool( matches );
+    if ( !addr_found )
     {
+        *soHandle = NULL;
         *soToken  = SCOREP_ADDR2LINE_SO_OBJECT_INVALID_TOKEN;
         *sclFound = false;
     }
@@ -700,15 +763,14 @@ SCOREP_Addr2line_LookupAddrRange( uintptr_t    beginProgramCounterAddr,
                   sclBeginLineNo == NULL ||
                   sclEndLineNo == NULL,
                   "Need valid OUT handles but NULL provided." );
-    lt_object* handle = lookup_so( beginProgramCounterAddr );
-    *soHandle = handle;
-    if ( handle )
-    {
-        *soFileName = handle->name;
-        *soBaseAddr = handle->base_addr;
-        *soToken    = handle->token;
 
-        lookup_bfd_t data = {
+    lrt_objects_container* matches = get_lrt_objects_container_from_pool();
+    lookup_so( beginProgramCounterAddr, matches );
+    bool addr_found = false;
+    for ( size_t i = 0; i < matches->size; ++i )
+    {
+        lt_object*   handle = matches->objects[ i ];
+        lookup_bfd_t data   = {
             .begin_addr           = beginProgramCounterAddr - handle->base_addr,
             .end_addr             = endProgramCounterAddr - handle->base_addr,
             .symbols              = handle->symbols,
@@ -723,9 +785,20 @@ SCOREP_Addr2line_LookupAddrRange( uintptr_t    beginProgramCounterAddr,
         *( data.scl_found_end_addr )   = false;
 
         map_over_sections_locked( handle, &data );
+        if ( *sclFoundBegin &&  *sclFoundEnd )
+        {
+            addr_found  = true;
+            *soHandle   = handle;
+            *soFileName = handle->name;
+            *soBaseAddr = handle->base_addr;
+            *soToken    = handle->token;
+            break;
+        }
     }
-    else
+    release_lrt_objects_container_to_pool( matches );
+    if ( !addr_found )
     {
+        *soHandle      = NULL;
         *soToken       = SCOREP_ADDR2LINE_SO_OBJECT_INVALID_TOKEN;
         *sclFoundBegin = false;
         *sclFoundEnd   = false;
@@ -785,56 +858,113 @@ unsigned   scorep_rt_object_count     = 0;
 uintptr_t  scorep_rt_objects_min_addr = UINTPTR_MAX;
 uintptr_t  scorep_rt_objects_max_addr = 0;
 
-static lt_object*
-lookup_so( uintptr_t addr )
-{
-    /* addr to be in [begin_addr, end_addr] of shared object representation */
 
-    /* search linearly in loadtime objects */
-    if ( lt_object_count > 0
-         && addr >= lt_begin_addrs[ 0 ]
-         && addr <= lt_objects[ lt_object_count - 1 ].end_addr )
+/* free list of lrt_objects_container objects */
+static lrt_objects_container* lrt_objects_container_free_list;
+static UTILS_Mutex            lrt_objects_container_free_list_mutex = UTILS_MUTEX_INIT;
+
+
+static lrt_objects_container*
+get_lrt_objects_container_from_pool( void )
+{
+    bool unlock = false;
+    if ( UTILS_Atomic_LoadN_uint32( &scorep_rt_object_count,
+                                    UTILS_ATOMIC_SEQUENTIAL_CONSISTENT ) > 0 )
     {
-        size_t i = 0;
-        while ( i < lt_object_count - 1
-                && lt_begin_addrs[ i + 1 ] <= addr )
+        SCOREP_RWLock_ReaderLock( &scorep_rt_objects_rwlock.pending,
+                                  &scorep_rt_objects_rwlock.release_n_readers );
+        unlock = true;
+    }
+    size_t needed_capacity = UTILS_Atomic_LoadN_uint32( &n_overlapping_address_ranges,
+                                                        UTILS_ATOMIC_SEQUENTIAL_CONSISTENT ) + 1;
+    lrt_objects_container* container;
+
+    UTILS_MutexLock( &lrt_objects_container_free_list_mutex );
+    bool alloc_container_required = lrt_objects_container_free_list == NULL;
+    if ( !alloc_container_required )
+    {
+        container                       =  lrt_objects_container_free_list;
+        lrt_objects_container_free_list =  lrt_objects_container_free_list->next;
+        if ( container->capacity < needed_capacity )
         {
-            ++i;
+            SCOREP_Memory_AlignedFree( container );
+            alloc_container_required = true;
         }
-        if ( lt_objects[ i ].end_addr >= addr )
+    }
+    if ( alloc_container_required )
+    {
+        container = SCOREP_Memory_AlignedMalloc( SCOREP_CACHELINESIZE,
+                                                 sizeof( lrt_objects_container ) + needed_capacity * sizeof( lt_object* ) );
+        container->capacity = needed_capacity;
+    }
+    container->size   = 0;
+    container->next   = NULL;
+    container->unlock = unlock;
+    UTILS_MutexUnlock( &lrt_objects_container_free_list_mutex );
+
+    UTILS_DEBUG( "container->capacity=%zu", container->capacity );
+    return container;
+}
+
+
+static inline void
+release_lrt_objects_container_to_pool( lrt_objects_container* container )
+{
+    if ( container->unlock )
+    {
+        SCOREP_RWLock_ReaderUnlock( &scorep_rt_objects_rwlock.pending,
+                                    &scorep_rt_objects_rwlock.departing,
+                                    &scorep_rt_objects_rwlock.release_writer );
+    }
+    /* return to pool */
+    UTILS_MutexLock( &lrt_objects_container_free_list_mutex );
+    container->next                 =  lrt_objects_container_free_list;
+    lrt_objects_container_free_list = container;
+    UTILS_MutexUnlock( &lrt_objects_container_free_list_mutex );
+}
+
+
+/* lt_object/rt_object address ranges might overlap. Thus, we need to
+   map_over_sections-search all lt_object/rt_object that contain addr.
+   Here we collect all matching objects in @a matches array that is
+   guaranteed to be large enough. The actual search is done be the caller.
+ */
+static void
+lookup_so( uintptr_t addr, lrt_objects_container* matches )
+{
+    /* search in loadtime objects */
+    for ( size_t i = 0; i < lt_object_count; ++i )
+    {
+        if ( lt_begin_addrs[ i ] <= addr && addr <= lt_objects[ i ].end_addr )
         {
             /* found addr in loadtime objects */
-            return &lt_objects[ i ];
+            UTILS_BUG_ON( matches->size + 1 > matches->capacity,
+                          "More address-ranges found than expected (%zu).",
+                          matches->capacity );
+            matches->objects[ matches->size++ ] = &lt_objects[ i ];
         }
     }
 
-    /* search linearly in runtime objects */
-    SCOREP_RWLock_ReaderLock( &scorep_rt_objects_rwlock.pending,
-                              &scorep_rt_objects_rwlock.release_n_readers );
-    if ( scorep_rt_objects_head != NULL
-         && addr >= scorep_rt_objects_min_addr
-         && addr <= scorep_rt_objects_max_addr )
+    if ( matches->unlock ) /* search rt objects only if caller decided to */
     {
-        rt_object* rt_obj = scorep_rt_objects_head;
-        while ( rt_obj->next
-                && rt_obj->next->begin_addr <= addr )
+        /* search in runtime objects */
+        if ( scorep_rt_objects_min_addr <= addr && addr <= scorep_rt_objects_max_addr )
         {
-            rt_obj = rt_obj->next;
-        }
-        if ( rt_obj->end_addr >= addr )
-        {
-            /* found addr in runtime objects */
-            SCOREP_RWLock_ReaderUnlock( &scorep_rt_objects_rwlock.pending,
-                                        &scorep_rt_objects_rwlock.departing,
-                                        &scorep_rt_objects_rwlock.release_writer );
-            return ( lt_object* )rt_obj;
+            rt_object* obj = scorep_rt_objects_head;
+            while ( obj )
+            {
+                if ( obj->begin_addr <= addr && addr <= obj->end_addr )
+                {
+                    /* found addr in runtime objects */
+                    UTILS_BUG_ON( matches->size + 1 > matches->capacity,
+                                  "More address-ranges found than expected (%zu).",
+                                  matches->capacity );
+                    matches->objects[ matches->size++ ] = ( lt_object* )obj;
+                }
+                obj = obj->next;
+            }
         }
     }
-    SCOREP_RWLock_ReaderUnlock( &scorep_rt_objects_rwlock.pending,
-                                &scorep_rt_objects_rwlock.departing,
-                                &scorep_rt_objects_rwlock.release_writer );
-    /* addr neither found in loadtime nor runtime objects */
-    return NULL;
 }
 
 
@@ -965,7 +1095,7 @@ SCOREP_Addr2line_Finalize( void )
 void
 scorep_la_preinit( uintptr_t* cookie )
 {
-    /* Called after ctors. Linktime shared objects already loaded and
+    /* Called after ctors. Load-time shared objects already loaded and
        dealt with at SCOREP_Addr2line_Initialize(). From now on,
        scorep_la_objopen and scorep_la_objclose are called. */
     UTILS_DEBUG_ENTRY();
@@ -1110,28 +1240,30 @@ insert_rt_object_cb( struct dl_phdr_info* info, size_t unused, void* data )
     UTILS_BUG_ON( scorep_rt_objopen_calls_tracked >= MAX_RT_OBJOPEN_CALLS_TRACKED );
     bitset_set( scorep_rt_objects_loaded, new->token );
 
-    /* add shared object into sorted (by begin_addr) singly-linked list */
     SCOREP_RWLock_WriterLock( &scorep_rt_objects_rwlock.writer_mutex,
                               &scorep_rt_objects_rwlock.pending,
                               &scorep_rt_objects_rwlock.departing,
                               &scorep_rt_objects_rwlock.release_writer );
-    if ( !scorep_rt_objects_head
-         || scorep_rt_objects_head->begin_addr > begin_addr_min )
+
+    /* Check for overlapping address ranges (no assumptions made). */
+    rt_object* obj = scorep_rt_objects_head;
+    while ( obj )
     {
-        new->next              = scorep_rt_objects_head;
-        scorep_rt_objects_head = new;
-    }
-    else
-    {
-        rt_object* obj = scorep_rt_objects_head;
-        while ( obj->next
-                && obj->next->begin_addr < begin_addr_min )
+        if ( obj->begin_addr <= new->end_addr
+             && obj->end_addr >= new->begin_addr )
         {
-            obj = obj->next;
+            UTILS_Atomic_AddFetch_uint32( &n_overlapping_address_ranges, 1,
+                                          UTILS_ATOMIC_SEQUENTIAL_CONSISTENT );
         }
-        new->next = obj->next;
-        obj->next = new;
+
+        obj = obj->next;
     }
+
+    /* Add shared object representation to list. No need to keep list
+       sorted (e.g., by begin-address). As address ranges may overlap,
+       we later on search all load-time and run-time objects. */
+    new->next              = scorep_rt_objects_head;
+    scorep_rt_objects_head = new;
     scorep_rt_object_count++;
     /* update rt address interval */
     if ( new->begin_addr < scorep_rt_objects_min_addr )
