@@ -20,7 +20,9 @@ Features and improvements:
   implementation-based barriers generated by the OpenMP runtime.
 - In BFD-based addr2line lookup, ignore `ld-linux[x].so` whose search
   address ranges have been reported to overlap with those of
-  runtime-loaded libraries.
+  runtime-loaded libraries. In addition, take overlapping
+  address-ranges into account. Previously, only the first matching
+  address range was searched.
 
 User tools and API improvements and changes:
 
